--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
   steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
