--- a/.github/workflows/publish_package.yaml
+++ b/.github/workflows/publish_package.yaml
@@ -8,7 +8,10 @@ jobs:
     runs-on: ubuntu-latest
 
   steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v3
+      with:
+        path: main
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
